refactor: 整理 domain 基础对象并补测试